--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/jpg" href="/assets/images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <meta name="title" content="Kudi | Peliculas, series" />
+    <meta name="description" content="Las mejores películas y series en una sola plataforma. ¡Disfruta del séptimo arte en tu casa!" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://app-kudi.vercel.app/" />
+    <meta property="og:title" content="Kudi | Peliculas, series" />
+    <meta property="og:description" content="Las mejores películas y series en una sola plataforma. ¡Disfruta del séptimo arte en tu casa!" />
+    <meta property="og:image" content="/assets/images/meta-logo.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Kudi | Peliculas, series" />
+    <meta property="twitter:description" content="Las mejores películas y series en una sola plataforma. ¡Disfruta del séptimo arte en tu casa!" />
+    <meta property="twitter:image" content="/assets/images/meta-logo.png" />
+
     <title>Kudi | Ver películas y series.</title>
   </head>
   <body>
